--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,8 @@ body {
     color: #1E202D;
 }
 
+
+
 .navbar {
     color: white;
     display: flex;
@@ -42,7 +44,7 @@ body {
     font-size: 1rem;
 }
 
-.navlink:first-child {
+.navbar a:first-child {
     margin-right: auto;
     margin-left: 1rem;
 }
@@ -51,6 +53,7 @@ body {
     width: 7rem;
     height: 7rem;
 }
+
 
 
 
@@ -63,6 +66,10 @@ body {
     /* display: flex;
     justify-content: space-between; */
 }
+
+
+
+
 
 .content-wrapper {
     display: flex;
@@ -102,6 +109,9 @@ body {
     cursor: pointer;
 }
 
+
+
+
 .gradient-overlay {
     pointer-events: none;
     width: 10rem;
@@ -128,6 +138,8 @@ body {
 
 .svg-wrapper {
     width: 70%;
+    display: flex;
+    justify-content: center;
 }
 
 .page-wave-down {
@@ -135,14 +147,32 @@ body {
 }
 
 .page-wave-up {
-    margin-bottom: -2rem;
+    margin-bottom: -1.6rem;
 }
 
 
-.landing-page-calendar {
+
+
+
+
+.landing-page-resources {
     height: 60vh;
     background-color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
+
+.landing-page-resources button {
+    color: black;
+    box-shadow: 0 5px 0 black;
+}
+
+.landing-page-resources h1 {
+    width: 24vw;
+}
+
+
 
 
 .landing-page-projects {
@@ -162,6 +192,34 @@ body {
 .landing-page-projects h1 {
     width: 20vw;
 }
+
+
+
+.landing-page-opportunities {
+    height: 60vh;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.landing-page-opportunities button {
+    color: #1E202D;
+    box-shadow: 0 5px 0 black;
+}
+
+
+
+.landing-page-about {
+    height: 60vh;
+    background-color:#1E202D;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+
+
 
 .footer {
     display: flex;
@@ -198,6 +256,10 @@ body {
     height: 3rem;
 }
 
+
+
+
+
 @media (max-width:1200px) {
     .landing-page-intro {
         flex-direction: column;
@@ -209,12 +271,29 @@ body {
         align-items: center;
         height: 70%;
     }
+    .landing-page-resources {
+        flex-direction: column;
+        align-items: center;
+        height: 70%;
+    }
+    .landing-page-opportunities {
+        flex-direction: column;
+        align-items: center;
+        height: 70%;
+    }
+    .landing-page-about {
+        flex-direction: column;
+        align-items: center;
+        height: 70%;
+    }
     .content-wrapper {
         align-items: center;
+        text-align: center;
+        margin-left: 0;
     }
     .content-wrapper h1 {
-        width: 75vw;
-        font-size: 6.6vw;
+        width: 90vw;
+        font-size: 7.5vw;
     }
     .content-wrapper h3 {
         display: none;
@@ -224,8 +303,8 @@ body {
         font-size: 3vw;
     }
     .content-wrapper button {
-        width: 24vw;
-        font-size: 2.2vw;
+        width: 100%;
+        /* font-size: 2.2vw; */
     }
     .svg-wrapper img {
         width: 80vw;
@@ -253,5 +332,8 @@ body {
     .footer-logo {
         flex-direction: column;
         text-align: center;
+    }
+    .landing-page-resources h1 {
+        width: 65vw;
     }
 }
