--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -41,7 +41,7 @@
             </div>
             <div class="footer-icons">
                 <a target="_blank" href="https://discord.gg/b7J9sFyF"><img class="social-media-icon" src="../static/Images/discord.svg" alt=""></a>
-                <a href=""><img class="social-media-icon" src="../static/Images/skype.svg" alt=""></a>
+                <a target="_blank" href="https://join.skype.com/sNtbedIYrOIP"><img class="social-media-icon" src="../static/Images/skype.svg" alt=""></a>
             </div>
         </footer>
 
