--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,5 +1,12 @@
 {% extends "base.html" %}
-
 {% block content %}
-<h1>About</h1>
+
+<div class="content-wrapper">
+<h1><div class="gradient-text">About Us</div></h1>
+<p>At Computer Science Club, we are dedicated to learning about new developments in the world of computer science. 
+    Fostering a collobarative community, the goal of Computer Science Club at Pleasant Valley High School is to help others learn
+    new skills about coding, hardware, and computer science homework.
+</p>
+</div>
+
 {% endblock %}
