add page wave and change styling

--- a/src/templates/about.html
+++ b/src/templates/about.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% block content %}
-    <section class="landing-page-intro">
+    <section class="about-section">
         <div class="content-wrapper">
-        <h1><div class="gradient-text">About Us</div></h1>
+            <h1>
+                <div class="gradient-text">About Us</div>
+            </h1>
             <p>
-            At Computer Science Club, we are dedicated to learning about new developments in the world of computer science. 
-            Fostering a collobarative community, the goal of Computer Science Club at Pleasant Valley High School is to help others learn
-            new skills about coding, hardware, and computer science homework.
-        </p>
+                At Computer Science Club, we are dedicated to learning about new developments in the world of computer science. 
+                Fostering a collobarative community, the goal of Computer Science Club at Pleasant Valley High School is to help others learn
+                new skills about coding, hardware, and computer science homework.
+            </p>
         </div>
     </section>
+    <img src="../static/Images/page-wave-1.svg" alt="Page Wave Down" class="page-wave-down">
 
 {% endblock %}
