--- a/src/templates/opportunities.html
+++ b/src/templates/opportunities.html
@@ -1,5 +1,39 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Opportunities</h1>
+    <section class="opportunities-section">
+        <div class="content-wrapper">
+            <h1>
+                <div class="gradient-text">Opportunities</div>
+            </h1>
+    
+            <div class="card-grid">
+                <a href="https://www.technologyiowa.org/event/2021-iowa-technology-summit-presented-by-wellmark-blue-cross-blue-shield/">
+                    <div class="card">
+                        <img class="card-image" src="https://www.technologyiowa.org/wp-content/uploads/2020/11/2021_Promo_Tech-Summit_1200px_F-1.jpg" alt="Iowa Tech Summit">
+                        <h3 class="card-header">Iowa Technology Summit</h3>
+                        <p>Date: May 24 @ 8:00 AM - May 25 @ 1:00 PM, 2021</p>
+                        <p class="card-desc">Sign up for the Virtual 2021 Iowa Technology Summit to connect with Iowan tech professionals and startups. This is a great opportunity to network with employers and improve your chance at getting hired.</p>
+                    </div>
+                </a>
+                <a href="https://hackqe.live/">
+                    <div class="card">
+                        <img class="card-image" src="https://dl.airtable.com/.attachmentThumbnails/151a60c438d9fdf3044bd0854f3035c7/78b9053d" alt="Hack QE">
+                        <h3 class="card-header">Hack QE</h3>
+                        <p>Date: May 1-2, 2021</p>
+                        <p class="card-desc">Virtual hackathon where you have 2 days to build anything computer science related that you want</p>
+                    </div>
+                </a>
+                <a href="https://hackon.tech">
+                    <div class="card">
+                        <img class="card-image" src="https://hackon.tech/og-image.png" alt="Hack On 2.0">
+                        <h3 class="card-header">HackOn 2.0</h3>
+                        <p>Date: May 28-30, 2021</p>
+                        <p class="card-desc">Virtual hackathon with a diversity/inclusion and mental health awareness theme. There are workshops for beginners directed by software engineers at big companies. The first place winner receives $330</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+    <img src="../static/Images/page-wave-1.svg" alt="Page Wave Down" class="page-wave-down">
 {% endblock %}
