--- a/src/static/resources.css
+++ b/src/static/resources.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap');
 
 
-.opportunities-section {
+.resources-section {
     background-color: #1E202D;
     height: 70vh;
     width: 100%;
