add styling and content for 404 page

--- a/src/templates/404.html
+++ b/src/templates/404.html
@@ -1,6 +1,13 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>404</h1>
-    <h3>Page Not Found</h3>
+    <div class="content-wrapper">
+        <div class="svg-wrapper">
+            <img src="../static/Images/space.svg" alt="404 SVG">
+        </div>
+        <h1>404</h1>
+        <p>Sorry, this page is unavailable</p>
+        <button><a href="https://pvcs.club">Return Home</a></button>
+    </div>
+    <img src="../static/Images/page-wave-1.svg" alt="Page Wave Down" class="page-wave-down">
 {% endblock %}
