--- a/src/static/join.css
+++ b/src/static/join.css
@@ -1,1 +1,113 @@
+@import url('https://fonts.googleapis.com/css2?family=Oxygen:wght@700&display=swap');
 
+
+.join-section {
+    background-color: #1E202D;
+    height: 30rem;
+    width: 100%;
+}
+
+.content-wrapper {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+.content-wrapper > h1 {
+    font-size: 3vw;
+    width: 35vw;
+}
+
+.gradient-text {
+    display: inline;
+    background: -webkit-linear-gradient(45deg, #00eb74, #00d9ff);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;  
+}
+
+.card-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 1rem;
+}
+
+.card {
+    background-color: #242837;
+    height: 18rem;
+    width: 24rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 1rem;
+    border-radius: 30px;
+    transform: translateY(0px);
+    transition: transform 0.5s ease;
+    cursor: pointer;
+}
+
+.card:hover {
+    transform: translateY(-10px);
+    transition: all 0.5s ease;
+}
+
+.card button {
+    padding: 0.5rem 2rem;
+    color: #242837;
+    border: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    font-family: Catamaran;
+    border-radius: 40px;
+}
+
+.discord-button {
+    background-color: #9da5da;
+}
+
+.skype-button {
+    background-color: #2b8cd7;
+}
+
+.icon {
+    width: 6rem;
+    height: 6rem;
+}
+
+@media (max-width:1500px) {
+    .content-wrapper {
+        align-items: center;
+        text-align: center;
+        margin-left: 0;
+    }
+    .content-wrapper h1 {
+        width: 90vw;
+        font-size: 7.5vw;
+    }
+    .card-grid {
+    }
+    .card {
+        width: 30vw;
+    }
+}
+
+@media (max-width:1000px) {
+    .join-section {
+        height: 50rem;
+    }
+    .card-grid {
+        grid-template-columns: 1fr;
+    }
+    .card {
+        width: 20rem;
+    }
+    .card h3 {
+        font-size: 5vw;
+    }
+    .card p {
+        font-size: 3vw;
+    }
+}
