--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -50,7 +50,7 @@
                 <a href={{ url_for("join") }}>Join Club</a>
             </div>
             <div class="footer-icons">
-                <a target="_blank" href="https://discord.gg/b7J9sFyF"><img class="social-media-icon" src="../static/Images/discord.svg" alt=""></a>
+                <a target="_blank" href="https://discord.gg/7eZP2YPBsD"><img class="social-media-icon" src="../static/Images/discord.svg" alt=""></a>
                 <a target="_blank" href="https://join.skype.com/sNtbedIYrOIP"><img class="social-media-icon" src="../static/Images/skype.svg" alt=""></a>
             </div>
         </footer>
