--- a/src/static/index.css
+++ b/src/static/index.css
@@ -58,7 +58,7 @@
 
 
 .gradient-text {
-    display: inline;
+    display: inline-block;
     background: -webkit-linear-gradient(45deg, #00eb74, #00d9ff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;  
@@ -189,17 +189,15 @@
     }
     .content-wrapper h1 {
         width: 90vw;
-        font-size: 7.5vw;
+        font-size: clamp(2.5rem, 7.5vw, 100rem);
+        line-height: clamp(3rem, 10vw, 100rem);
     }
     .content-wrapper h3 {
         display: none;
     }
     .content-wrapper p {
-        width: 70vw;
-        font-size: 3vw;
-    }
-    .content-wrapper button {
-        
+        width: 75vw;
+        font-size: clamp(1.3rem, 3vw, 100rem);
     }
     .svg-wrapper img {
         width: 80vw;
