--- a/src/static/about.css
+++ b/src/static/about.css
@@ -3,7 +3,7 @@
     display: flex;
     padding:1.5rem;
     background-color: #1E202D;
-    height: 50vh;
+    height: auto;
 }
 
 .content-wrapper {
@@ -42,22 +42,13 @@
     }
     .content-wrapper h1 {
         width: 90vw;
-        font-size: 7.5vw;
+        font-size: clamp(2.5rem, 7.5vw, 100rem);
     }
     .content-wrapper h3 {
         display: none;
     }
     .content-wrapper p {
         width: 70vw;
-        font-size: 3vw;
-    }
-    .about-section {
-        height: 50vw;
+        font-size: clamp(1rem, 3vw, 100rem);
     }
 }
-
-/* @media (max-width:900px) {
-    .navbar {
-        flex-direction: column;
-    }
-} */
