update intro text

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <section class="landing-page-intro">
         <div class="content-wrapper">
-            <h1>Join The Pleasant Valley <div class="gradient-text">Computer Science</div> Club</h1>
+            <h1>The Pleasant Valley <div class="gradient-text">Computer Science</div> Club</h1>
             <h3>It's free!</h3>
             <p>
                 Explore the field of computer science by coding games, websites, and apps. 
