--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,7 +4,6 @@
     <section class="landing-page-intro">
         <div class="content-wrapper">
             <h1>The Pleasant Valley <div class="gradient-text">Computer Science</div> Club</h1>
-            <h3>It's free!</h3>
             <p>
                 Explore the field of computer science by coding games, websites, and apps. 
                 Our community will collaborate with and support you every step of the way
@@ -63,7 +62,7 @@
     <section class="landing-page-about">
         <div class="content-wrapper">
             <h1 class="fade-in">Meet <div class="gradient-text">Us</div></h1>
-            <p>View the current club members and learn more about our mission</p>
+            <p>Learn more about our mission and what we do every meeting</p>
             <a href={{ url_for("about") }}><button>About Us</button></a>
         </div>
         <div class="svg-wrapper">
