--- a/src/static/index.css
+++ b/src/static/index.css
@@ -1,14 +1,3 @@
-.landing-page-intro {
-    color: white;
-    display: flex;
-    padding:1.5rem;
-    background-color: #1E202D;
-    height: 60vh;
-    /* display: flex;
-    justify-content: space-between; */
-}
-
-
 .fade-in {
     margin-top: -4rem;
     opacity: 0;
@@ -19,19 +8,15 @@
     display: flex;
     flex-direction: column;
     margin-top: 1rem;
-    margin-left: 1.5rem;
+    /* margin-left: 1.5rem; */
+    align-items: center;
+    text-align: center;
+    /* padding:1.5rem; */
 }
 
 .content-wrapper h1 {
-    /* font-size: clamp(30px,3vw, 750px); */
-    font-size: 3vw;
-    width: 35vw;
-}
-
-.content-wrapper h3 {
-    margin: 1rem 0rem;
-    font-size: 2vw;
-    width: 35vw;
+    font-size: 3.5vw;
+    width: 40vw;
 }
 
 .content-wrapper p {
@@ -87,10 +72,16 @@
 
 
 
-
+.landing-page-intro {
+    color: white;
+    display: flex;
+    background-color: #1E202D;
+    height: auto;
+    align-items: center;
+}
 
 .landing-page-resources {
-    height: 60vh;
+    height: auto;
     background-color: white;
     display: flex;
     flex-direction: row;
@@ -103,7 +94,11 @@
 }
 
 .landing-page-resources h1 {
-    width: 24vw;
+    width: auto;
+}
+
+.landing-page-resources p {
+    width: 22vw;
 }
 
 
@@ -112,7 +107,7 @@
 .landing-page-projects {
     color: white;
     background-color: #1E202D;
-    height: 70vh;
+    height: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -124,13 +119,13 @@
 }
 
 .landing-page-projects h1 {
-    width: 20vw;
+    width: auto;
 }
 
 
 
 .landing-page-opportunities {
-    height: 60vh;
+    height: auto;
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -144,7 +139,7 @@
 
 
 .landing-page-about {
-    height: 60vh;
+    height: auto;
     background-color:#1E202D;
     color: white;
     display: flex;
@@ -160,27 +155,27 @@
     .landing-page-intro {
         flex-direction: column;
         align-items: center;
-        height: 70%;
+        padding: 0;
     }
     .landing-page-projects {
         flex-direction: column;
         align-items: center;
-        height: 70%;
+        padding: 0;
     }
     .landing-page-resources {
         flex-direction: column;
         align-items: center;
-        height: 70%;
+        padding: 0;
     }
     .landing-page-opportunities {
         flex-direction: column;
         align-items: center;
-        height: 70%;
+        padding: 0;
     }
     .landing-page-about {
         flex-direction: column;
         align-items: center;
-        height: 70%;
+        padding: 0;
     }
     .content-wrapper {
         align-items: center;
@@ -191,9 +186,6 @@
         width: 90vw;
         font-size: clamp(2.5rem, 7.5vw, 100rem);
         line-height: clamp(3rem, 10vw, 100rem);
-    }
-    .content-wrapper h3 {
-        display: none;
     }
     .content-wrapper p {
         width: 75vw;
