--- a/src/static/opportunities.css
+++ b/src/static/opportunities.css
@@ -3,9 +3,8 @@
 
 .opportunities-section {
     background-color: #1E202D;
-    height: 70vh;
+    height: auto;
     width: 100%;
-    overflow-y: scroll;
 }
 
 .content-wrapper {
