--- a/src/static/base.css
+++ b/src/static/base.css
@@ -22,6 +22,11 @@ body {
     z-index: 3;
 }
 
+.navbar > a:first-child {
+  margin-right: auto;
+  margin-left: 1rem;
+}
+
 .navbar h3 {
     margin: 0rem 1rem;
 }
@@ -31,7 +36,7 @@ body {
     color: white;
 }
 
-.navlink button {
+.navlink-button {
     padding: 0.4rem 1rem;
     color: white;
     background: linear-gradient(45deg, #00eb74, #00d9ff);
@@ -43,64 +48,53 @@ body {
     font-size: 1rem;
 }
 
-.navbar a:first-child {
-    margin-right: auto;
-    margin-left: 1rem;
-}
-
 .logo {
     width: 7rem;
     height: 7rem;
 }
 
-/* 
-
+.dropbtn {
+  background-color: #1E202D;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  font-family: Catamaran;
+  border: none;
+  cursor: pointer;
+}
 
 .dropdown {
-  float: left;
-  overflow: hidden;
-  }
-
-.dropdown:hover .dropbutton {
-  background-color: #00eb74;
+  position: relative;
+  display: inline-block;
 }
 
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #ffffff;
+  background-color: #f1f1f1;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
+  border-radius: 1rem;
 }
 
+
 .dropdown-content a {
-  float: none;
-  color: #1E202D;
-  padding: 14px 18px;
+  color: #1e202d;
+  padding: 16px 16px;
   text-decoration: none;
   display: block;
-  text-align: left;
+  border-radius: 1rem;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
-}
+  /* background-color: #00eb74; */
+  background: linear-gradient(to right, #00eb74, #00d9ff)
+  }
 
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
-.dropdown dropdownbutton {
-  font-size: 16px;
-  border: none;
-  outline: none;
-  color: #ffffff;
-  padding: 14px 16px;
-  background-color: inherit;
-  font-family: inherit;
-  margin: 0; 
-}*/
 
 .footer {
     display: flex;
@@ -155,15 +149,14 @@ body {
 }
 
 .hamburger-dropdown {
-    display: flex;
     flex-direction: column;
     align-items: center;
     background-color: #1E202D;
-    height: 30rem;
+    height: 33rem;
     display: none;
     width: 100%;
     font-size: 1.5rem;
-    margin-top: -30rem;
+    margin-top: -34rem;
     /* transition: margin-top 0.5s ease; */
 }
 
@@ -177,6 +170,8 @@ body {
     color: white;
     padding: 0.5rem;
 }
+
+/* Large Screen Settings */
 
 @media (max-width:1500px) {
     .footer {
@@ -198,8 +193,23 @@ body {
         text-align: center;
     }
 }
+/* Mobile Settings - Tablet */
+@media (max-width:1100px) {
+    .navlink {
+        display: none;
+    }
+    .hamburger-icon {
+        display: block;
+    }
+    .hamburger-dropdown {
+        display: flex;
+    }
+    .content-wrapper p {
+        font-size: 17px;
+    }
+}
 
-@media (max-width:900px) {
+@media (max-width:650px) {
     .navlink {
         display: none;
     }
