fix rendering of terms and conditions route

--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -62,6 +62,7 @@
             <a href={{ url_for("opportunities") }}>Opportunities</a>
             <a href={{ url_for("about") }}>About</a>
             <a href={{ url_for("join") }}>Join Club</a>
+            <a href={{ url_for("legal") }}>Terms and Conditions</a>
         </div>
         <div class="footer-icons">
             <a target="_blank" href="https://discord.gg/7eZP2YPBsD"><img class="social-media-icon" src="../static/Images/discord.svg" alt=""></a>
