--- a/src/templates/TIconverters.html
+++ b/src/templates/TIconverters.html
@@ -8,7 +8,7 @@
             </h1>
     
             <div class="card-grid">
-                <a target="_blank" href="#">
+                <a href="../static/tizip/RPMCONRPS.zip" download="RPMCONRPS.zip">
                     <div class="card">
                         <h3 class="card-header">Convert Rotations Per Minute to Radians Per Second</h3>
                         <p>RPMCONRPS</p>
@@ -16,7 +16,7 @@
                         <p class="card-desc">This programs is used for finding the radians per second of a wheel or disc when given the rotations per minute.</p>
                     </div>
                 </a>
-                <a target="_blank" href="#">
+                <a href="../static/tizip/AUCON.zip" download="AUCON.zip"
                     <div class="card">
                         <h3 class="card-header">Convert an Orbital Meter Radius to an Astronomical Unit Radius</h3>
                         <p>AUCON</p>
@@ -32,9 +32,10 @@
     <section class="ti-instructions-section">
         <div class="content-wrapper">
           <div class="ti-instructions">
-          <h4>There are 2 ways to use the program: 
-            <ol><li>Using the TI Connect Software</li><p>Video</p>
-            <li>Manually Programming Your Calculator</li><p>Instructions</p>
+          <h4>There are 3 ways to use the program: 
+            <ol><li>Using the TI Connect CE Software</li><p>Download the Software at <a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-ce-sw">TI Connect CE Software.</a>Then get a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a> or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after unzipping the file. <br><br><iframe width="560" height="315" src="https://www.youtube.com/embed/iS-28EwTxqs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br><br></p>
+            <li>Using the TI Connect Software</li><p>Download the Software at <a target="_blank" href="https://education.ti.com/en/products/computer-software/ti-connect-sw">TI Connect Software.</a> Then get a <a target="_blank" href="https://education.ti.com/en/products/accessories/connectivity-kit">TI link cable</a> or standard USB Mini Type A to USB Type Mini B. Then follow the step by step instructions after unzipping the file. For <a target="_blank" href="../static/tizip/TIConnectMAC-SendFiles" download="../static/tizip/TIConnectMAC-SendFiles">Macintosh</a> or <a target="_blank" href="../static/tizip/TIConnectPC-SendFiles" download="../static/tizip/TIConnectPC-SendFiles">PC</a></p><p>
+            <li>Manually Programming Your Calculator</li><p>You can manually program the files with basic key knowledge found <a target="_blank" href="../static/tizip/TIProgrammingGuide.pdf" download="..static/tizip/TIProgrammingGuide.pdf">here.</a> You will still need to download the TI Connect or Connect CE Software to view the files.</p>
             </ol>
         </h4>
           </div>
